--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Permissions and features should stay outside the application tag -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +22,17 @@
         android:theme="@style/Theme.Prakriti"
         tools:targetApi="31">
 
-        <!-- ✅ SplashScreen is now the launcher activity -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.yourapp.camera.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <!-- Launcher activity -->
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -23,12 +42,20 @@
             </intent-filter>
         </activity>
 
+        <!-- Other activities -->
         <activity android:name=".MainActivity" android:exported="true" />
-        <activity android:name=".Instruction5" android:exported="false" />
-        <activity android:name=".Instruction4" android:exported="false" />
-        <activity android:name=".Instruction3" android:exported="false" />
-        <activity android:name=".Instruction2" android:exported="false" />
+        <activity android:name=".HomeScreen" android:exported="false" />
+        <activity android:name=".Crops" android:exported="false" />
+        <activity android:name=".CropsDescription" android:exported="false" />
+        <activity android:name=".CameraDescription" android:exported="false" />
+        <activity android:name=".CameraActivity" android:exported="false" />
+        <activity android:name=".NPKCalculator" android:exported="false" />
+        <activity android:name=".ProfileScreen" android:exported="false" />
         <activity android:name=".Instruction1" android:exported="false" />
+        <activity android:name=".Instruction2" android:exported="false" />
+        <activity android:name=".Instruction3" android:exported="false" />
+        <activity android:name=".Instruction4" android:exported="false" />
+        <activity android:name=".Instruction5" android:exported="false" />
         <activity android:name=".OfflineInstruction" android:exported="false" />
 
     </application>
