--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <!-- Permissions and features should stay outside the application tag -->
+
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
+    <!-- Optional: specify device has a camera but not mandatory -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -22,73 +27,51 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Prakriti"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".HowToUseTheApp"
-            android:exported="false" />
 
+        <!-- FileProvider for camera -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.yourapp.camera.fileprovider"
+            android:authorities="com.example.prakriti.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-        </provider> <!-- Launcher activity -->
+        </provider>
+
+        <!-- Activities -->
         <activity
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Other activities -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".HomeScreen"
-            android:exported="false" />
-        <activity
-            android:name=".Crops"
-            android:exported="false" />
-        <activity
-            android:name=".CropsDescription"
-            android:exported="false" />
-        <activity
-            android:name=".CameraDescription"
-            android:exported="false" />
-        <activity
-            android:name=".CameraActivity"
-            android:exported="false" />
+        </activity>
+
+        <activity android:name=".MainActivity" android:exported="true" />
+        <activity android:name=".MainActivity2" android:exported="false" />
+        <activity android:name=".HomeScreen" android:exported="false" />
+        <activity android:name=".AboutActivity" android:exported="false" />
+        <activity android:name=".HelpActivity" android:exported="false" />
+        <activity android:name=".EditProfile" android:exported="false" />
+        <activity android:name=".ContactTrainer" android:exported="false" />
+        <activity android:name=".HowToUseTheApp" android:exported="false" />
+        <activity android:name=".Crops" android:exported="false" />
+        <activity android:name=".CropsDescription" android:exported="false" />
+        <activity android:name=".CameraDescription" android:exported="false" />
+        <activity android:name=".CameraActivity" android:exported="false" />
         <activity
             android:name=".NPKCalculator"
-            android:exported="false" />
-        <activity
-            android:name=".ProfileScreen"
-            android:exported="false" />
-        <activity
-            android:name=".Instruction1"
-            android:exported="false" />
-        <activity
-            android:name=".Instruction2"
-            android:exported="false" />
-        <activity
-            android:name=".Instruction3"
-            android:exported="false" />
-        <activity
-            android:name=".Instruction4"
-            android:exported="false" />
-        <activity
-            android:name=".Instruction5"
-            android:exported="false" />
-        <activity
-            android:name=".OfflineInstruction"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity android:name=".ProfileScreen" android:exported="false" />
+        <activity android:name=".Instruction1" android:exported="false" />
+        <activity android:name=".Instruction2" android:exported="false" />
+        <activity android:name=".Instruction3" android:exported="false" />
+        <activity android:name=".Instruction4" android:exported="false" />
+        <activity android:name=".Instruction5" android:exported="false" />
+        <activity android:name=".OfflineInstruction" android:exported="false" />
     </application>
 
 </manifest>
